--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       </div>
 
       <div class="space-x-1">
-        <button class="py-2 px-3 bg-sky-500 hover:bg-sky-600 text-white rounded-lg border-0">use default input</button>
+        <button class="py-2 px-3 bg-sky-500 hover:bg-sky-600 text-white rounded-lg border-0"
+                onclick="fetchDefaultInput()">use default input</button>
         <button class="py-2 px-5 bg-sky-500 hover:bg-sky-600 text-white rounded-lg border-0"
                 onclick="run()">run</button>
       </div>
